--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@
     --shadow-filtr-button: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     --work-list: #EEEEEE;
     --line-header: #ECECEC;
+    --overlay-color: rgba(47, 48, 58, 0.4);
 }
 
 html {
@@ -217,6 +218,15 @@ img {
     padding: 200px 0;
     text-align: center;
 }
+.overlay {
+    max-width: 1600px;
+    max-height: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    background-image: 
+    linear-gradient(to right, var(--overlay-color), var(--overlay-color)),
+    url(../images/hero.jpg);
+}
 .hero-title {
     font-style: normal;
     font-weight: 900;
@@ -289,6 +299,8 @@ img {
     color: var(--secondary-color-text);
     max-width: 270px;
 }
+
+
 .title-name {
     font-style: normal;
     font-weight: 500;
