Виправив розмітку логотипів

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,7 @@
     --overlay-color: rgba(47, 48, 58, 0.4);
     --border-client: #AFB1B8;
     --footer-socsolid-main: rgba(255, 255, 255, 0.1);
+    --hero-bg: #C4C4C4;
 }
 
 html {
@@ -59,6 +60,10 @@ p, h1, h2, h3, h4, h5, h6 {
 ul, ol { 
     margin: 0;
     padding-left: 0;
+}
+img {
+    display: block;
+    max-width: 100%;
 }
 
 
@@ -137,7 +142,7 @@ ul, ol {
     fill: var(--secondary-color-text);
 }
 .logo-mail {
-    --logo-mail-color: currentColor;
+    color: currentColor;
     margin: auto 0;
     margin-right: 10px;
     align-items: flex-end;
@@ -223,6 +228,7 @@ ul, ol {
 .footer-pos {
     display: flex;
     gap: 94px;
+    align-items: baseline;
 }
 /* .footer-block-1, 
 .footer-block-2 {
@@ -236,7 +242,6 @@ ul, ol {
     text-transform: uppercase;
     color: var(--footer-color-text);
     margin-bottom: 20px;
-    padding-top: 12px;
 }
 
 .list-soc {
@@ -259,20 +264,20 @@ ul, ol {
     margin: auto;
 }
 
+
 /* ----------!!!стилі головної Студія!!!---------- */
 .hero {
-    background-color: var(--footer-color-bg);
     padding: 200px 0;
     text-align: center;
 }
 .overlay {
     max-width: 1600px;
-    max-height: 600px;
     margin-left: auto;
     margin-right: auto;
     background-image: 
     linear-gradient(to right, var(--overlay-color), var(--overlay-color)),
     url(../images/hero.jpg);
+    background-color: var(--hero-bg);
 }
 .hero-title {
     font-style: normal;
@@ -353,9 +358,8 @@ ul, ol {
     height: 120px;
     border-radius: 4px;
     margin-bottom: 30px;
-}
-.icon-perevagy {
-    margin: auto 0;
+    justify-content: center;
+    align-items: center;
 }
 
 .title-name {
@@ -396,10 +400,11 @@ ul, ol {
     background-color: var(--footer-socsolid-main);
     border-radius: 50%;
     fill: var(--border-client);
+    justify-content: center;
+    align-items: center;
 }
 .logo-soc-comand {
-    margin: auto;
-    --logo-soc-comand-color: currentColor;
+    color: currentColor;
 }
 .solid-round-comand:hover,
 .solid-round-comand:focus {
@@ -441,14 +446,15 @@ ul, ol {
     height: 92px;
     min-width: 170px;
     fill: var(--border-client);
+    justify-content: center;
+    align-items: center;
 }
 .logo-client {
-    margin: auto auto;
-    --logo-client-color: currentColor;
+    color: currentColor;
 }
 .border-client:hover,
 .border-client:focus {
-    border: 1px solid var(--primary-color-text);
+    border-color: var(--primary-color-text);
     fill: var(--primary-color-text);
 }
 
@@ -524,8 +530,8 @@ ul, ol {
 .border-card:nth-child(3n) {
     margin-right: 0;
 }
-.border-card:hover,
-.border-card:focus {
+.border-shadow:hover,
+.border-shadow:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
@@ -535,13 +541,7 @@ ul, ol {
 
 .card-content {
     padding: 20px 24px;
-    border-left-width: 1px;
-    border-left-style: solid;
-    border-left-color: var(--work-list);
-    border-bottom-width: 1px;
-    border-bottom-style: solid;
-    border-bottom-color: var(--work-list);
-    border-right-width: 1px;
-    border-right-style: solid;
-    border-right-color: var(--work-list);
+    border-left: 1px solid var(--work-list);
+    border-bottom: 1px solid var(--work-list);
+    border-right: 1px solid var(--work-list);
 }
