--- a/css/styles.css
+++ b/css/styles.css
@@ -530,8 +530,8 @@ img {
 .border-card:nth-child(3n) {
     margin-right: 0;
 }
-.border-shadow:hover,
-.border-shadow:focus {
+.border-card:hover,
+.border-card:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
